--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
   dio: ^5.7.0
+  flutter_inappwebview: ^6.1.5
+
 
 dev_dependencies:
   flutter_test:
